# rps_game

./: .gitignore  Caddyfile  Cargo.toml  LICENSE  Makefile.toml  README.md
backend/: Cargo.toml  users.db
backend/src/: main.rs  ws.rs
backend/src/application/: auth_handler.rs  forum_handler.rs  game_handler.rs  mod.rs  ws_handler.rs
backend/src/auth/application/: auth_handler.rs  mod.rs
backend/src/auth/domain/: model.rs
backend/src/auth/infrastructure/: auth_route.rs  auth_service.rs  jwt.rs  mod.rs  password.rs
backend/src/domain/: auth_model.rs  forum_model.rs  game_model.rs  mod.rs  rps_model.rs  users_actor.rs
backend/src/game/application/: mod.rs  ws_handler.rs
backend/src/game/domain/: model.rs
backend/src/game/infrastructure/: game_repo.rs  mod.rs  player_queue.rs  ws_route.rs
backend/src/infrastructure/auth/: auth_route.rs  auth_service.rs  jwt.rs  password.rs
backend/src/infrastructure/forum/: forum_route.rs  forum_service.rs  mod.rs
backend/src/infrastructure/game/: game_handler.rs  game_recorder.rs  game_repo.rs  game_service.rs  games_actor.rs  mod.rs  notifier.rs  player_queue.rs  players_actor.rs  ws_route.rs
frontend/: Cargo.toml  index.html  style.css
frontend/locales/en/: main.ftl
frontend/locales/ru/: main.ftl
frontend/src/: app.rs  main.rs
frontend/src/api/: auth.rs  forum.rs  mod.rs
frontend/src/components/: deck.rs  forum.rs  mod.rs  navbar.rs  settings.rs
frontend/src/hooks/: contexts.rs  mod.rs  my_toaster.rs  ws_context.rs
frontend/src/pages/: game.rs  games_hub.rs  home.rs  info.rs  login.rs  mmmvpn.rs  mod.rs  register.rs  rps_game.rs
frontend/styles/: _animations.scss  _base.scss  _buttons.scss  _components.scss  _layout.scss  _typography.scss  _variables.scss  base.css  components.css  style.scss  utilities.css
shared/: Cargo.toml
shared/src/: auth.rs  forum.rs  game.rs  lib.rs  rps_game.rs  ws_messages.rs
src/: main.rs
src/game/: auth.rs  logic.rs  mod.rs  models.rs  routes.rs  ws.rs
tests/: Cargo.toml
tests/src/: lib.rs
