[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
argon2 = {version = "0.5", features = ["std"]}
jsonwebtoken = "9"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
chrono = "0.4"
once_cell = "1.21.3"
uuid = {version = "1.18.0", features = ["v4"]}
actix = "0.13.5"
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-files = "0.6.6"
async-trait = "0.1.88"
dotenvy = "0.15.7"

shared = {path = "../shared"}
