[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true, features = ["postgres", "runtime-tokio", "chrono", "uuid"]}

actix-web = "4"
tokio = { version = "1", features = ["full"] }
argon2 = {version = "0.5.3", features = ["std"]}
jsonwebtoken = {version = "10", features= ["rust_crypto"]}
actix-web-httpauth = "0.8"
actix-cors = "0.7"
chrono = "0.4"
once_cell = "1.21.3"
uuid = {version = "1.18.1", features = ["v4"]}
actix = "0.13.5"
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-files = "0.6.8"
async-trait = "0.1.89"
dotenvy = "0.15.7"

shared = {path = "../shared"}
