[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true, features = ["postgres", "runtime-tokio", "chrono", "uuid"]}

actix-web = "4.12.1"
tokio = { version = "1.48.0", features = ["full"] }
argon2 = {version = "0.5.3", features = ["std"]}
jsonwebtoken = {version = "10.2.0", features= ["rust_crypto"]}
actix-web-httpauth = "0.8.2"
actix-cors = "0.7.1"
once_cell = "1.21.3"
actix = "0.13.5"
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-files = "0.6.9"
async-trait = "0.1.89"
dotenvy = "0.15.7"
slab = "0.4.11"

chrono = {workspace = true}
uuid = {workspace = true}

shared = {path = "../shared"}
