[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-utils = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-console = "0.3"
wasm-bindgen-futures = "0.4"
yew-router = "0.18.0"
futures = "0.3.31"
reqwasm = "0.5.0"
regex = "1.11.1"
tokio = {version = "1.44.1", features = ["macros","sync","rt", "io-util"]}
