[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}

leptos = {version = "0.8.6", features = ["csr"]}
leptos_router = "0.8.5"
leptoaster = "0.2.3"
leptos-use = "0.16.2"
gloo-net = "0.6.0"
js-sys = "0.3.77"
web-sys = "0.3.77"
codee = "0.3.2"
wasm-bindgen-futures = "0.4.50"
shared = {path = "../shared"}
