[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio-tungstenite = "0.27.0"
http = "1.3.1"
cookie = "0.18.1"
serde_json = "1.0.142"
anyhow = "1.0.99"

shared = {path="../shared"}
